<?xml version="1.0" encoding="utf-8"?>
<RadioGroup
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/new_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SortPopupItem"
        android:text="@string/file_apps_manager_sort_new_first"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/old_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SortPopupItem"
        android:text="@string/file_apps_manager_sort_old_first"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/big_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SortPopupItem"
        android:text="@string/file_apps_manager_sort_big_first"/>

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/small_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SortPopupItem"
        android:text="@string/file_apps_manager_sort_small_first"/>

</RadioGroup>