<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/midnight_blue">


    <LinearLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/arrow_back_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="35dp"
            android:src="@drawable/baseline_arrow_back" />

        <TextView
            android:id="@+id/title_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/heraclito_medium"
            android:text="@string/deleting_files"
            android:textColor="@color/white"
            android:textSize="@dimen/Text.24" />
    </LinearLayout>


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingHorizontal="16dp"
        android:clipToPadding="false"
        android:scrollbars="none">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/all_files"
                android:drawableLeft="@drawable/ic_images"
                android:text="@string/file_apps_manager_photo"
                style="@style/file_apps_manager_chip"/>
            <RadioButton
                android:id="@+id/images"
                android:drawableLeft="@drawable/ic_images"
                android:text="@string/file_apps_manager_video"
                android:checked="true"
                style="@style/file_apps_manager_chip"/>
            <RadioButton
                android:id="@+id/video"
                android:drawableLeft="@drawable/ic_video"
                android:text="@string/file_apps_manager_audio"
                style="@style/file_apps_manager_chip"/>
            <RadioButton
                android:id="@+id/documents"
                android:drawableLeft="@drawable/ic_documents"
                android:text="@string/file_apps_manager_documents"
                style="@style/file_apps_manager_chip"/>
            <RadioButton
                android:id="@+id/audio"
                android:drawableLeft="@drawable/ic_audio"
                android:text="@string/file_apps_manager_apps"
                style="@style/file_apps_manager_chip"/>

        </RadioGroup>

    </HorizontalScrollView>





</LinearLayout>