<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/card_corners_white">

    <ImageView
        android:id="@+id/cross_exit_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/heraclito_regular"
        android:src="@drawable/ic_exit_cross"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/title_text"
        style="@style/Dialog.Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/file_apps_manager_we_need_permission"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@id/body_text"
        app:layout_constraintEnd_toStartOf="@+id/cross_exit_iv"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/body_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/body_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/file_apps_manager_permission_description"
        style="@style/Dialog.Description"
        app:layout_constraintBottom_toTopOf="@id/cancel_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/cancel_btn"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="16dp"
        android:text="@string/file_apps_manager_cancel"
        style="@style/Dialog.Button.Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/allow_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/body_text" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/allow_btn"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/file_apps_manager_allow"
        style="@style/Dialog.Button.Ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/cancel_btn"
        app:layout_constraintTop_toBottomOf="@id/body_text" />


</androidx.constraintlayout.widget.ConstraintLayout>

