<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/background"
        android:orientation="vertical">


        <yin_kio.toolbar.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title_text="@string/file_apps_manager_files_deleting" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/card_for_info">

            <TextView
                android:id="@+id/memory_use_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="10dp"
                android:text="@string/file_apps_manager_memory_used"
                android:textAppearance="@style/Text.Medium"
                android:textColor="@color/white"
                android:textSize="@dimen/Text.18"
                app:layout_constraintBottom_toTopOf="@id/percentage_used_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percentage_used_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/Text.Medium"
                android:textColor="@color/white"
                android:textSize="@dimen/Text.18"
                app:layout_constraintBottom_toTopOf="@id/progress_bar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/memory_use_tv"
                tools:text="75%" />

            <TextView
                android:id="@+id/gigabyte_used_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="7dp"
                android:textAppearance="@style/Text.Medium"
                android:textColor="@color/white"
                android:textSize="@dimen/Text.16"
                app:layout_constraintBottom_toTopOf="@id/progress_bar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toEndOf="@id/percentage_used_tv"
                tools:text="60,0 Гб / 64,0 Гб" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="0dp"
                android:layout_height="10dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:progressDrawable="@drawable/progress_bar_gradient"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:progress="80" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />


    <TextView
        android:id="@+id/danger_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/bg_button_danger"
        android:gravity="start|center"
        android:minHeight="53dp"
        android:paddingHorizontal="16dp"
        android:text="@string/file_apps_manager_start_need_free"
        android:textAppearance="@style/Text.Medium"
        android:textColor="@color/red"
        android:textSize="@dimen/Text.16" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/scan_button"
        style="@style/MainButton"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/file_apps_manager_scan"
        android:textAllCaps="false"
        android:textAppearance="@style/Text.Medium"
        android:textSize="@dimen/Text.18" />

</LinearLayout>
